[package]
name = "Vectra"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }